{{ $NEXT }}

0.103     2020-06-21 18:49:25+01:00 Europe/London
    - Remove documentation for methods removed previously.

0.102 2019-05-17
    - Continue to support the latest WebDriver spec as it evolves, older
      servers may no longer work.

0.101 2018-01-02
    - Try harder to get a meaningful error message.
    - Make use of subroutine signatures.

0.100 2017-12-21
    - This is a breaking change, we now support the latest WebDriver spec and
      test on the latest geckodriver, I suspect phantomjs no longer works, but
      chromedirver should.
    - Add $elem->prop.
    - Drop $drv->js_phantom.
    - Drop $drv->storage.
    - Drop $elem->location.
    - Drop $elem->location_in_view.
    - Drop $elem->move_to.
    - Drop $elem->submit.
    - Rename $drv->*_alert to $drv->alert_*.
    - Rename $drv->source to $drv->html, add $elem->html.
    - Replace $drv->window_{postion,size} with $drv->window_rect.

0.006 2016-12-14
    - Reorganise window methods.
    - Always send a JSON payload, to appease geckodriver.
    - Assorted fixes. Thanks arc.

0.005 2016-11-22
    - Doc fixes. Thanks tomhukins.
    - Avoid timeouts by using HTTP::Tiny's public API.

0.004 2016-02-24
    - Require Perl 5.20 to allow for cleaner code.
    - Require Carp 1.25 to ensure errors have periods on the end.
    - Add $drv->alert_text.
    - Add $drv->status.
    - Add $drv->storage.
    - Add $elem->location.
    - Add $elem->location_in_view.

0.003 2015-09-11
    - Add support for ChromeDriver.
    - Document how to use different backends.
    - Add cookie getter/setter.
    - Rename delete_cookie to cookie_delete.
    - Support cookie_delete(@list_of_cookies_to_delete).
    - Add support for asynchronous JavaScript.
    - Rename execute to js.
    - Rename execute_phantom to js_phantom.
    - Add append, split, and uniq methods to element collections.

0.002 2015-07-05
    - $drv->() caches the closure and is now twice as fast.