@@ -1,5 +1,7 @@
 {{ $NEXT }}
 
+    - Add $drv->print for PDF printing
+
 0.103     2020-06-21 18:49:25+01:00 Europe/London
     - Remove documentation for methods removed previously.
 
